# BetterFaster3.0

./: .gitignore  __init__.py  betterFaster-orig.py  betterFaster.py  betterFaster_test.py  pyproject.toml  rand_localization_covariance.csv  rename_files.py  run_betterFaster.py  test.py
SLAMCore/: fastSLAM2.py
betterFaster/: __init__.py
betterFaster/SLAMCore/: __init__.py  ekf_filter_utils.py  fastSLAM2-old.py  fastSLAM2.py
betterFaster/betterTogether/: CliqueSim.py  JointPersistenceFilter.py  __init__.py  clique_utils.py  old_estimate_gstate_function.py
betterFaster/comparisonMethods/: __init__.py  betterTogether.py  multiMap.py  run_compare.py
betterTogether/: CliqueSim-orig.py  CliqueSim.py  JointPersistenceFilter-orig.py  JointPersistenceFilter.py  clique_utils.py
configs/: carla.toml  fake.toml
docker/: Dockerfile  requirements.txt  start_docker.sh
exp_utils/: projection_utils.py
plotting/: debug_plot.py  plot_utils.py
sim_utils/: all_clique_feats.pickle  debugFeature_extraction.py  debug_observability.py  debug_utils.py  extract_all_possible_observations.py  extract_gt_car_traj.py  generate_fakeDataset.py  generate_fake_gstate.py  get_gt_gstate_dists.py  get_rgb_click.py  observed_cliques.pickle  performance.py  projection_utils.py  purge_files.py  test.py  utils.py
tracked_clique_pickles/: exp0tracked_cliques.pickle  exp10tracked_cliques.pickle  exp1tracked_cliques.pickle  exp3tracked_cliques.pickle  exp4tracked_cliques.pickle  exp5tracked_cliques.pickle  exp6tracked_cliques.pickle  exp8tracked_cliques.pickle  exp9tracked_cliques.pickle
(+132 files in other folders)
